--- a/views/news/restrict.ejs
+++ b/views/news/restrict.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div class="starter-template">
-  <h1>Noticias Privadas</h1>
+  <h1>Noticias Restritas</h1>
   <table>
     <% news.forEach(noticia => { %>
     <tr>
