--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
           <a class="nav-link" href="/noticias">Noticias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/noticias">Noticias Adm</a>
+          <a class="nav-link" href="/restrict/noticias">Noticias Adm</a>
         </li>
 
         <%if( 'user' in locals) {%>
