--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/noticias">Noticias</a>
         </li>
-        <%if( 'user' in locals) {%>
+        <%if(locals.user) {%>
         <%if(locals.role === 'restrito') {%>
         <li class="nav-item">
           <a class="nav-link" href="/restrict/noticias">Noticias Restritas</a>
