Login pelo Facebook

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <label for="inputPassword" class="sr-only">Senha</label>
     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+    <a class="btn btn-lg btn-primary btn-block" href="/facebook">Entrar Com o Facebook</a>
   </form>
 </div>
 
