--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,7 +48,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false"><%= locals.user.username %></a>
+            aria-haspopup="true" aria-expanded="false"><%= locals.user.username || locals.user.name %></a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <%locals.user.roles.forEach(role => {%>
             <%if(role !== locals.role) {%>
