--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,7 @@
     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
     <a class="btn btn-lg btn-primary btn-block" href="/facebook">Entrar Com o Facebook</a>
+    <a class="btn btn-lg btn-primary btn-block" href="/google">Entrar Com o Google</a>
   </form>
 </div>
 
